Added favicons, error pages, and mailchimp template section

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=eEabyKvxak">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png?v=eEabyKvxak" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png?v=eEabyKvxak" sizes="16x16">
+    <link rel="manifest" href="/manifest.json?v=eEabyKvxak">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=eEabyKvxak" color="#ff8a00">
+    <link rel="shortcut icon" href="/favicon.ico?v=eEabyKvxak">
+    <meta name="apple-mobile-web-app-title" content="Kirk Roberts">
+    <meta name="application-name" content="Kirk Roberts">
+    <meta name="theme-color" content="#ffffff">
+
   </head>
   <body>
     <div class="site-width">
@@ -32,7 +43,7 @@
         <li><b>Technical consultant</b>: how hard/expensive is it to collaborate on XYZ? What tools are&nbsp;available?</li>
         <li><b>Process consultant</b>: how can we structure our web project process to make it better for&nbsp;everyone?</li>
         <li><b>Design extrapolator</b>: you don&rsquo;t have to create a bajillion mockups. I can fill in the gaps if&nbsp;wanted.</li>
-        <li><b>Front-end developer</b>: creating all the html/CSS/JavaScript to make the website function in&nbsp;a&nbsp;browser.</li>
+        <li><b>Front-end developer</b>: creating all the html/CSS/JavaScript to make the website function beautifully in&nbsp;a&nbsp;browser.</li>
         <li><b>Third-party tools integrator</b>: add ecommerce, email lists, e-whatever using appropriate&nbsp;services.</li>
         <li><b>CMS integrator</b>: hook the website up to a browser-based content management&nbsp;system.</li>
         <li><b>CMS trainer</b>: provide custom videos and documentation to help the client get up to speed with&nbsp;the&nbsp;CMS.</li>
