Added htaccess rewriting, website-designer, noindex on mailchimp

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
 
       <h1>Hi, my name is Kirk.</h1>
       <h2>Let me guess: you&rsquo;re a design principal who needs a web project consultant and coder/developer.</h2>
-      <p><i>Hey, that&rsquo;s what I do&hellip;</i> perhaps we&rsquo;ll be a good match to collaborate on your&nbsp;project.</p>
+      <p><i><b>Hey, that&rsquo;s what I do&hellip;</b></i> perhaps we&rsquo;ll be a good match to collaborate on your&nbsp;project.</p>
+
+      <p><i>{ Oh, you say you need a “website designer”? <a href="website-designer">Check this out.</a> }</i></p>
 
       <h3>What I want to give and get in our relationship</h3>
       <ul>
