Added mailchimp signup

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
       <p>Please <a href="https://goo.gl/forms/C5wwc0Usx8gwaAhh2">contact me using this form</a> and I&rsquo;ll send you a link so we can book a day&nbsp;and&nbsp;time.</p>
       <p>Happy webbing,</p>
       <p><i>Kirk Roberts</i></p>
+      <p><i>p.s. &mdash; if you made it this far, maybe you want to <a href="http://eepurl.com/cD08Yr">sign up for my mailing list</a>? It isn&rsquo;t really a newsletter. Click the link to find out more.</i></p>
       <figure>
         <img class="multiply" src="images/me.png" alt="" width="300" height="450">
         <figcaption>This is me. I am about this slender and my head is about that big. I&rsquo;ve been told I have a long torso. Sometimes I have&nbsp;a&nbsp;beard.</figcaption>
