--- a/app/404.html
+++ b/app/404.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Kirk Roberts | Page not found (404)</title>
+    <title>Kirk Roberts | Page Not Found (404)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="/css/styles.css">
+
+    <meta name="description" content="">
+
+    <!-- build:css css/styles.min.css -->
+    <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- endbuild -->
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=eEabyKvxak">
     <link rel="icon" type="image/png" href="/favicon-32x32.png?v=eEabyKvxak" sizes="32x32">
@@ -19,6 +24,9 @@
 
   </head>
   <body>
+
+    
+
     <div class="site-width">
 
       <h1>Whoopsee-doodle!</h1>
@@ -28,5 +36,15 @@
       <p>Perhaps you&rsquo;d like to <a href="/">visit the home page</a> instead?</p>
 
     </div>
+
+
+
+    <footer class="site-footer">
+      <img src="images/robotLove.png" width="100" alt="">
+    </footer>
+
+    <!-- build:js js/main.min.js -->
+    <!-- endbuild -->
+
   </body>
 </html>
