--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,17 @@
       <img src="images/robotLove.png" width="100" alt="">
     </footer>
 
+    <!-- what branch? -->
+    <aside class="site">
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Another Page</a></li>
+          <li><a href="#">Yet Another Page</a></li>
+        </ul>
+      </nav>
+    </aside>
+
     <!-- build:js js/main.min.js -->
     <!-- endbuild -->
 
