Added CMS Guide and some style tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -197,7 +197,7 @@
 
   <div class="narrow-site-width">
   <div class="spaced">
-    <p>p.s. &mdash; if you made it this far, maybe you want to <a href="http://eepurl.com/cD08Yr">sign up for my mailing list</a>? It isn&rsquo;t really a newsletter. Click the link to find out more.</p>
+    <p>p.s. &mdash; if you made it this far, maybe you want to <a href="http://eepurl.com/cD08Yr">sign up for my mailing list?</a> It isn&rsquo;t really a newsletter. Click the link to find out more.</p>
   </div>
 </div>
 
@@ -205,11 +205,11 @@
 
 
       <footer class="site-footer">
-        <img src="images/robotLove.png" width="100" alt="">
+        <img src="images/robotLove.png" width="100" alt="Illustration of robot head and heart">
       </footer>
     </div>
 
-      <div class="menu-toggle" id="menu-toggle"><img src="images/plus.svg" alt="toggle menu" onerror="this.onerror=null; this.src='images/plus.png'"></div>
+    <div class="menu-toggle" id="menu-toggle"><img src="images/plus.svg" alt="toggle menu" onerror="this.onerror=null; this.src='images/plus.png'"></div>
 
 <aside class="sidebar" id="sidebar">
   <div class="sidebar-content" id="sidebar-content">
@@ -217,23 +217,23 @@
       <h4 class="sidebar-header">Kirk Roberts</h4>
       <nav>
         <ul class="sidebar-nav">
-          <li><a href="#" class="current">The Deal</a></li>
+          <li><a href="/">The Deal</a></li>
           <!-- <li><a href="#">About</a></li> -->
           <li><a href="https://goo.gl/forms/C5wwc0Usx8gwaAhh2">Contact</a></li>
           <li><a href="http://eepurl.com/cD08Yr">Mailing List</a></li>
         </ul>
       </nav>
     </div>
-    <!-- <div class="sidebar-group">
+    <div class="sidebar-group">
       <h5 class="sidebar-subhead">Appendices</h5>
       <nav>
         <ul class="sidebar-nav recede">
-          <li><a href="#">CMS Guide</a></li>
-          <li><a href="#">Theme Song</a></li>
-          <li><a href="#">Bookshelf</a></li>
+          <li><a href="/cms-guide.html">CMS Guide</a></li>
+          <!-- <li><a href="#">Theme Song</a></li> -->
+          <!-- <li><a href="#">Bookshelf</a></li> -->
         </ul>
       </nav>
-    </div> -->
+    </div>
   </div>
 </aside>
 
