Added rejected taglines and nav updates

--- a/app/index.html
+++ b/app/index.html
@@ -228,7 +228,8 @@
       <h5 class="sidebar-subhead">Appendices</h5>
       <nav>
         <ul class="sidebar-nav recede">
-          <li><a href="/cms-guide.html">CMS Guide</a></li>
+          <li><a href="/cms-guide">CMS Guide</a></li>
+          <li><a href="/rejected-taglines">Rejected Taglines</a></li>
           <!-- <li><a href="#">Theme Song</a></li> -->
           <!-- <li><a href="#">Bookshelf</a></li> -->
         </ul>
