--- a/app/cms-guide.html
+++ b/app/cms-guide.html
@@ -60,7 +60,7 @@
 
   <br>
 
-  <div class="reversed spaced banner">
+  <div class="reversed spaced banner" id="faq">
     <div class="narrow-site-width">
       <h1>FAQ</h1>
     </div>
@@ -147,7 +147,8 @@
       <h5 class="sidebar-subhead">Appendices</h5>
       <nav>
         <ul class="sidebar-nav recede">
-          <li><a href="/cms-guide.html">CMS Guide</a></li>
+          <li><a href="/cms-guide">CMS Guide</a></li>
+          <li><a href="/rejected-taglines">Rejected Taglines</a></li>
           <!-- <li><a href="#">Theme Song</a></li> -->
           <!-- <li><a href="#">Bookshelf</a></li> -->
         </ul>
