--- a/app/rejected-taglines.html
+++ b/app/rejected-taglines.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Kirk Roberts | Can-do Website Collaboration</title>
+    <title>Rejected Taglines | Kirk Roberts | Can-do Website Collaboration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="">
@@ -27,50 +27,35 @@
     <div class="site-wrapper">
 
       
-
-    <div class="reversed spaced banner">
-      <div class="narrow-site-width">
-        <h1>Hi, my name is Kirk.</h1>
-        <h1>My main gig is doing <a href="index.html">custom website development for fancy design firms</a> that (rightfully) charge a lot of money.</h1>
-      </div>
-    </div>
-
+  <div class="reversed spaced">
     <div class="narrow-site-width">
-      <p>But.</p>
-      <p>I also enjoy collaborating directly with individuals who need a &ldquo;website designer&rdquo; but have a more modest budget.</p>
-      <h3>Our goals for your site are likely to be...</h3>
-      <ul>
-        <li>organization</li>
-        <li>a sense of purpose</li>
-        <li>clear communication</li>
-        <li>appropriate and consistent tone</li>
-        <li>ease of use (for site visitors)</li>
-        <li>a &ldquo;clean&rdquo; and professional look</li>
-        <li>ease of use (for site editors to update the site)</li>
-      </ul>
-      <h3>Depending on your needs we can collaborate on...</h3>
-      <ul>
-        <li>purpose definition</li>
-        <li>site structure (sections, pages)</li>
-        <li>text content oversight</li>
-        <li>image curation</li>
-        <li>page layout</li>
-        <li>selecting and customizing a visual theme</li>
-        <li>choosing and linking third-party services (social media, email lists, video hosting, etc)</li>
-        <li>setting up e-commerce</li>
-        <li>mobile considerations</li>
-        <li>domain (e.g. your-company.com) signup and linking</li>
-        <li>email service selection and linking</li>
-      </ul>
-      <p>I highly, highly recommend we use <a href="https://www.squarespace.com">Squarespace</a> to build and host your site. They provide lots of great tools and attractive starting templates we can customize to our needs. There are definitely limitations, but overall I feel that the trade-offs are worth it. In many cases this is true even if you’re already invested in another service.</p>
-      <p>You might even just want to have a go at it yourself. Really, give it a try! There is a free trial.</p>
-      <p>If you find that you’d like to have a partner to help you get set up right, then I might be your guy. </p>
-      <p>Check out some more <a href="index.html">details about me and how I work</a> and <a href="https://goo.gl/forms/C5wwc0Usx8gwaAhh2">get in touch</a> so we can discuss details and see if we’re a good match to collaborate.</p>
-      <p>Happy webbing,</p>
-      <p><i>Kirk Roberts</i></p>
+      <h1>Rejected Taglines</h1>
+      <h2>Presented for those who like their truth served awkward and inappropriate.</h2>
     </div>
-
-    <div class="spaced">
+  </div>
+  <div class="narrow-site-width spaced">
+    <p><i>Kirk Roberts.</i> <b>I’ll care more about your website than you will.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Building a better tomorrow, today, since 1999.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Where sticker shock becomes website ecstasy.</b></p>
+    <p><i>Kirk Roberts.</i> <b>I’ll do your nerdy work.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Exposing your best assets online.</b></p>
+    <p><i>Kirk Roberts.</i> <b>One man, one mission, one destiny.</b></p>
+    <p><i>Kirk Roberts.</i> <b>I think about websites at inappropriate times. </b></p>
+    <p><i>Kirk Roberts.</i> <b>Banishing the ugly, one client at a time.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Think small.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Geeky enough to get the job done, cool enough to make it fun.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Website collaboration for people who aren’t complete morons.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Like a designer and a programmer had a baby.</b></p>
+    <p><i>Kirk Roberts.</i> <b>My office space is very economical.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Way better than those other people you’re considering.</b></p>
+    <p><i>Kirk Roberts.</i> <b>Sitting on my ass all day for your benefit.</b></p>
+  </div>
+  <div class="narrow-site-width">
+    <br>
+    <p>Happy webbing,</p>
+    <p><i>Kirk Roberts</i></p>
+  </div>
+  <div class="spaced">
   <div class="narrow-site-width">
     <figure>
       <img class="multiply" src="images/me.png" alt="" width="300" height="450">
@@ -79,6 +64,11 @@
   </div>
 </div>
 
+  <div class="narrow-site-width">
+  <div class="spaced">
+    <p>p.s. &mdash; if you made it this far, maybe you want to <a href="http://eepurl.com/cD08Yr">sign up for my mailing list?</a> It isn&rsquo;t really a newsletter. Click the link to find out more.</p>
+  </div>
+</div>
 
 
 
